Configure credo, dialyzer, sobelow and some mix aliases

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
 
+# Dialyzer's PLT file directory.
+/priv/plts/*.plt
+/priv/plts/*.plt.hash
+
 # The directory Mix downloads your dependencies sources to.
 /deps/
 
@@ -34,4 +38,3 @@ phoenix_bootstrap-*.tar
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
-
