--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,25 +27,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Elixir/OTP
-        uses: erlef/setup-beam@v1
+      - name: Common setup with cache
+        uses: ./.github/actions/common-with-cache
         with:
           elixir-version: ${{ matrix.versions.elixir }}
           otp-version: ${{ matrix.versions.otp }}
-
-      - name: Cache deps
-        uses: actions/cache@v4
-        with:
-          path: deps
-          key: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
-
-      - name: Cache build
-        uses: actions/cache@v4
-        with:
-          path: _build
-          key: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
 
       - name: Install dependencies
         run: |
@@ -70,25 +56,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Elixir/OTP
-        uses: erlef/setup-beam@v1
+      - name: Common setup with cache/restore
+        uses: ./.github/actions/common-with-cache-restore
         with:
           elixir-version: ${{ matrix.versions.elixir }}
           otp-version: ${{ matrix.versions.otp }}
-
-      - name: Cache deps
-        uses: actions/cache/restore@v4
-        with:
-          path: deps
-          key: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
-
-      - name: Cache build
-        uses: actions/cache/restore@v4
-        with:
-          path: _build
-          key: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
 
       - name: Credo
         run: mix credo --strict
@@ -114,25 +86,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Elixir/OTP
-        uses: erlef/setup-beam@v1
+      - name: Common setup with cache/restore
+        uses: ./.github/actions/common-with-cache-restore
         with:
           elixir-version: ${{ matrix.versions.elixir }}
           otp-version: ${{ matrix.versions.otp }}
-
-      - name: Cache deps
-        uses: actions/cache/restore@v4
-        with:
-          path: deps
-          key: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
-
-      - name: Cache build
-        uses: actions/cache/restore@v4
-        with:
-          path: _build
-          key: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
 
       - name: Hex audit
         run: mix hex.audit
@@ -158,25 +116,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Elixir/OTP
-        uses: erlef/setup-beam@v1
+      - name: Common setup with cache/restore
+        uses: ./.github/actions/common-with-cache-restore
         with:
           elixir-version: ${{ matrix.versions.elixir }}
           otp-version: ${{ matrix.versions.otp }}
-
-      - name: Restore cache deps
-        uses: actions/cache/restore@v4
-        with:
-          path: deps
-          key: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
-
-      - name: Restore cache build
-        uses: actions/cache/restore@v4
-        with:
-          path: _build
-          key: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
 
       - name: Restore PLT cache
         id: plt_cache
@@ -205,9 +149,41 @@ jobs:
       - name: Dialyzer
         run: mix dialyzer --format github
 
-  test:
+  test-1-2:
+    name: Partitioned tests
     needs: compile
-    name: Test
+    strategy:
+      fail-fast: false
+      matrix:
+        versions:
+          - elixir: 1.17.3
+            otp: 27.1
+    uses: ./.github/workflows/partitioned_tests.yml
+    with:
+      partition: "1"
+      partitions: "2"
+      elixir-version: ${{ matrix.versions.elixir }}
+      otp-version: ${{ matrix.versions.otp }}
+
+  test-2-2:
+    name: Partitioned tests
+    needs: compile
+    strategy:
+      fail-fast: false
+      matrix:
+        versions:
+          - elixir: 1.17.3
+            otp: 27.1
+    uses: ./.github/workflows/partitioned_tests.yml
+    with:
+      partition: "2"
+      partitions: "2"
+      elixir-version: ${{ matrix.versions.elixir }}
+      otp-version: ${{ matrix.versions.otp }}
+
+  coverage:
+    needs: [test-1-2, test-2-2]
+    name: Unify coverage report
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -216,51 +192,30 @@ jobs:
           - elixir: 1.17.3
             otp: 27.1
 
-    services:
-      db:
-        image: postgres:16
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: phoenix_bootstrap_test
-        ports: ["5432:5432"]
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Elixir/OTP
-        uses: erlef/setup-beam@v1
+      - name: Common setup with cache/restore
+        uses: ./.github/actions/common-with-cache-restore
         with:
           elixir-version: ${{ matrix.versions.elixir }}
           otp-version: ${{ matrix.versions.otp }}
 
-      - name: Cache deps
-        uses: actions/cache/restore@v4
+      - name: Download cover artifacts
+        uses: actions/download-artifact@v4
         with:
-          path: deps
-          key: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: deps-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
+          path: cover
+          pattern: code-coverage-report-*
+          merge-multiple: true
 
-      - name: Cache build
-        uses: actions/cache/restore@v4
-        with:
-          path: _build
-          key: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: build-${{ runner.os }}-${{ matrix.versions.otp }}-${{ matrix.versions.elixir }}-
-
-      - name: Run tests
-        run: mix test --warnings-as-errors --raise
+      - name: Unify coverage reports
+        run: mix test.coverage
 
   docker_build:
     name: Build and export to Docker
     runs-on: ubuntu-latest
-    needs: [lint, deps_audit, dialyzer, test]
+    needs: [lint, deps_audit, dialyzer, coverage]
 
     steps:
       - name: Checkout
