--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -212,65 +212,10 @@ jobs:
       - name: Unify coverage reports
         run: mix test.coverage
 
-  docker_build:
+  docker:
     name: Build and export to Docker
-    runs-on: ubuntu-latest
     needs: [lint, deps_audit, dialyzer, coverage]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and export to Docker
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          platforms: linux/amd64
-          load: true
-          tags: anderkonzen/phoenix_bootstrap:latest
-          cache-from: type=registry,ref=anderkonzen/phoenix_bootstrap:buildcache
-          cache-to: type=registry,ref=anderkonzen/phoenix_bootstrap:buildcache,mode=max
-
-  docker_publish:
-    name: Build and publish Docker image
-    if: ${{ github.ref == 'refs/heads/main' }}
-    runs-on: ubuntu-latest
-    needs: [docker_build]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          platforms: linux/amd64
-          push: true
-          tags: anderkonzen/phoenix_bootstrap:latest
-          cache-from: type=registry,ref=anderkonzen/phoenix_bootstrap:buildcache
-          cache-to: type=registry,ref=anderkonzen/phoenix_bootstrap:buildcache,mode=max
+    uses: ./.github/workflows/partitioned_tests.yml
+    with:
+      username: ${{ secrets.DOCKERHUB_USERNAME }}
+      password: ${{ secrets.DOCKERHUB_TOKEN }}
